nanos-secure-sdk/lib_stusb/STM32_USB_Device_Library/Core/Inc/usbd_def.h

/**
  * @}
  */ 


/** @defgroup USBD_DEF_Exported_TypesDefinitions
  * @{
  */

typedef  struct  usb_setup_req 
{
    
    uint8_t   bmRequest;                      
    uint8_t   bRequest;                           
    uint16_t  wValue;                             
    uint16_t  wIndex;                             
    uint16_t  wLength;                            
}USBD_SetupReqTypedef;
struct _USBD_HandleTypeDef;
typedef uint8_t  (*Init_t)             (struct _USBD_HandleTypeDef *pdev , uint8_t cfgidx);
typedef uint8_t  (*DeInit_t)           (struct _USBD_HandleTypeDef *pdev , uint8_t cfgidx);
/* Control Endpoints*/
typedef uint8_t  (*Setup_t)            (struct _USBD_HandleTypeDef *pdev , USBD_SetupReqTypedef  *req);
  
typedef uint8_t  (*EP0_TxSent_t)       (struct _USBD_HandleTypeDef *pdev );
    
typedef uint8_t  (*EP0_RxReady_t)      (struct _USBD_HandleTypeDef *pdev );
  
/* Class Specific Endpoints*/
typedef uint8_t  (*DataIn_t)           (struct _USBD_HandleTypeDef *pdev , uint8_t epnum);
   
typedef uint8_t  (*DataOut_t)          (struct _USBD_HandleTypeDef *pdev , uint8_t epnum, uint8_t* pData, apdu_buffer_t*);
 
typedef uint8_t  (*SOF_t)              (struct _USBD_HandleTypeDef *pdev);
 
typedef uint8_t  (*IsoINIncomplete_t)  (struct _USBD_HandleTypeDef *pdev , uint8_t epnum);
 
typedef uint8_t  (*IsoOUTIncomplete_t) (struct _USBD_HandleTypeDef *pdev , uint8_t epnum);
   

typedef uint8_t  *(*GetHSConfigDescriptor_t)(uint16_t *length);
 
typedef uint8_t  *(*GetFSConfigDescriptor_t)(uint16_t *length);
   
typedef uint8_t  *(*GetOtherSpeedConfigDescriptor_t)(uint16_t *length);
typedef uint8_t  *(*GetDeviceQualifierDescriptor_t)(uint16_t *length);
typedef uint8_t  *(*GetUsrStrDescriptor_t)(struct _USBD_HandleTypeDef *pdev ,uint8_t index,  uint16_t *length);
    
typedef struct _Device_cb
{
  Init_t Init;
  DeInit_t DeInit;
 /* Control Endpoints*/
  Setup_t Setup;
  EP0_TxSent_t EP0_TxSent;
  EP0_RxReady_t EP0_RxReady;
  /* Class Specific Endpoints*/
  DataIn_t DataIn;
  DataOut_t DataOut;
  SOF_t SOF;
  IsoINIncomplete_t IsoINIncomplete;
  IsoOUTIncomplete_t IsoOUTIncomplete;

  GetHSConfigDescriptor_t GetHSConfigDescriptor;
  GetFSConfigDescriptor_t GetFSConfigDescriptor;
  GetOtherSpeedConfigDescriptor_t GetOtherSpeedConfigDescriptor;
  GetDeviceQualifierDescriptor_t GetDeviceQualifierDescriptor;
#if (USBD_SUPPORT_USER_STRING == 1)
  GetUsrStrDescriptor_t GetUsrStrDescriptor;
#endif  
  
} USBD_ClassTypeDef;
/* Following USB Device Speed */
typedef enum 
{
  USBD_SPEED_HIGH  = 0,
  USBD_SPEED_FULL  = 1,
  USBD_SPEED_LOW   = 2,  
}USBD_SpeedTypeDef;
/* Following USB Device status */
typedef enum {
  USBD_OK   = 0,
  USBD_BUSY,
  USBD_FAIL,
}USBD_StatusTypeDef;
typedef uint8_t  *(*GetDeviceDescriptor_t)( USBD_SpeedTypeDef speed , uint16_t *length);
typedef uint8_t  *(*GetLangIDStrDescriptor_t)( USBD_SpeedTypeDef speed , uint16_t *length);
typedef uint8_t  *(*GetManufacturerStrDescriptor_t)( USBD_SpeedTypeDef speed , uint16_t *length);
typedef uint8_t  *(*GetProductStrDescriptor_t)( USBD_SpeedTypeDef speed , uint16_t *length);
typedef uint8_t  *(*GetSerialStrDescriptor_t)( USBD_SpeedTypeDef speed , uint16_t *length);
typedef uint8_t  *(*GetConfigurationStrDescriptor_t)( USBD_SpeedTypeDef speed , uint16_t *length);
typedef uint8_t  *(*GetInterfaceStrDescriptor_t)( USBD_SpeedTypeDef speed , uint16_t *length);
typedef uint8_t  *(*GetBOSDescriptor_t)( USBD_SpeedTypeDef speed , uint16_t *length);
/* USB Device descriptors structure */
typedef struct
{
  GetDeviceDescriptor_t GetDeviceDescriptor;
  GetLangIDStrDescriptor_t GetLangIDStrDescriptor;
  GetManufacturerStrDescriptor_t GetManufacturerStrDescriptor;
  GetProductStrDescriptor_t GetProductStrDescriptor;
  GetSerialStrDescriptor_t GetSerialStrDescriptor;
  GetConfigurationStrDescriptor_t GetConfigurationStrDescriptor;
  GetInterfaceStrDescriptor_t GetInterfaceStrDescriptor;
  GetBOSDescriptor_t GetBOSDescriptor;
} USBD_DescriptorsTypeDef;
/* USB Device handle structure */
typedef struct
{ 
  uint32_t                status;
  uint32_t                total_length;    
  uint32_t                rem_length; 
  uint32_t                maxpacket;   
} USBD_EndpointTypeDef;
/* USB Device handle structure */
typedef struct _USBD_HandleTypeDef
{
  uint8_t                 id;
  uint32_t                dev_config;
  uint32_t                dev_default_config;
  uint32_t                dev_config_status; 
  USBD_SpeedTypeDef       dev_speed; 
  USBD_EndpointTypeDef    ep_in[IO_USB_MAX_ENDPOINTS];
  USBD_EndpointTypeDef    ep_out[IO_USB_MAX_ENDPOINTS];  
  uint32_t                ep0_state;  
  uint32_t                ep0_data_len;     
  uint8_t                 dev_state;
  uint8_t                 dev_old_state;
  uint8_t                 dev_address;
  uint8_t                 dev_connection_status;  
  uint8_t                 dev_test_mode;
  uint32_t                dev_remote_wakeup;

  USBD_SetupReqTypedef    request;
  USBD_DescriptorsTypeDef *pDesc;
  struct {
    USBD_ClassTypeDef       *pClass;
    void                    *pClassData;  
  }                       interfacesClass [USBD_MAX_NUM_INTERFACES];
  void                    *pUserData;    
  void                    *pData;    
} USBD_HandleTypeDef;